fix some button/link alignment

--- a/app/assets/stylesheets/forms.css.sass
+++ b/app/assets/stylesheets/forms.css.sass
@@ -15,6 +15,8 @@ form
       border: 1px solid $light_purple
       color: white
       font-size: 1em
+      &[type='submit']
+        width: 10.2em
       &:active
         border: 1px solid white
         box-shadow: 0 1px 2px $light_purple
