--- a/app/assets/stylesheets/widget.css.sass
+++ b/app/assets/stylesheets/widget.css.sass
@@ -4,7 +4,7 @@ a.btn
   text-align: center
   padding: 4px
   font-size: 1.2em
-  width: 10em
+  width: 9.8em
   margin-left: 12.2em
   &:link, &:visited
     color: white
